--- a/Style.css
+++ b/Style.css
@@ -54,7 +54,7 @@ nav {
  .contain {
     width: 35%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0);
     padding: 40px;
     padding-bottom: 40px;
     text-align: center;
