--- a/Style.css
+++ b/Style.css
@@ -7,7 +7,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     backface-visibility: 50%;
-    background-color: rgba(0, 0, 0, 1);
+    background-color: rgba(0, 0, 0, 0.7);
     scroll-behavior: none;
    
 }
@@ -63,7 +63,7 @@ nav {
     margin-bottom: 8%;
     color: white;
     position: relative;
-   
+   background-color: rgba(0, 0, 0, 0.7)
     z-index: 2;
     font-family: initial;
     color: #F8E09B;
